
add_subdirectory(HdmLoader)
add_subdirectory(PdbLoader)
add_subdirectory(RawVolumeLoader)
add_subdirectory(RawSparseVolumeLoader)
add_subdirectory(StlLoader)
add_subdirectory(VolLoader)
add_subdirectory(CdmLoader)
add_subdirectory(ObjLoader)
add_subdirectory(PdmLoader)
add_subdirectory(SphLoader)
add_subdirectory(UdmLoader)
add_subdirectory(VtkLoader)
add_subdirectory(BcmLoader)
add_subdirectory(VisioColorMapLoader)
